--- a/popup/ytmvf.html
+++ b/popup/ytmvf.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>My Firefox Plugin Popup</title>
+    <title>YouTube Music Volume Fixer</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -14,28 +14,25 @@
             margin-bottom: 10px;
         }
 
-        input[type="range"] {
-            width: 100%;
-        }
-
-        button {
+        input {
             display: block;
             margin-top: 10px;
             padding: 5px 10px;
-            background-color: #007bff;
+            background-color: #f20000;
             color: #fff;
             border: none;
             border-radius: 4px;
             cursor: pointer;
+            /* banner width */
+            width: 188px;
         }
     </style>
 </head>
 
 <body>
-    <p>Set the volume max value</p>
-    <label for="volume">Volume: </label>
-    <input type="text" id="volume" name="volume" value="100">
-    <p>Note: balls</p>
+    <img src="../icons/logo-32.png" id="banner">
+    <label for="max-volume">Max Volume (1% - 100%): </label>
+    <input type="number" id="max-volume" name="max-volume" min="1" max="100" value="100">
 
     <script src="popup.js"></script>
 </body>
