fix: abrasive syntax errors causing the script to fail
threw a bunch of stuff at a wall while i reasearched how js works. found out that chatgpt sucks as
usual and failed to tell me i was supposed to create my own function and not use that fancy function
pointer thing.

added a lot more logging now that i figured that console.log won't actually log
anything to the log console without some magic that im still not sure of

also, made the volume selector thing go by 5's instead of one by one, which makes bit more sense to
use the little triangles now + the user can still input their own number, though have yet to test
if the event will trigger after every keystroke or after pressing enter or something. might need to
add a submit button or something :d

oh yeah also added a hidden div thingy that tells you if you're out of
memory or not that can be toggleable

--- a/popup/ytmvf.html
+++ b/popup/ytmvf.html
@@ -31,8 +31,13 @@
 
 <body>
     <img src="../icons/logo-32.png" id="banner">
-    <label for="max-volume">Max Volume (1% - 100%): </label>
-    <input type="number" id="max-volume" name="max-volume" min="1" max="100" value="100">
+    <div id="has-storage" z-index="0">
+        <label for="max-volume">Max Volume (0% - 100%): </label>
+        <input type="number" id="max-volume" name="max-volume" min="0" max="100" value="100" step="5">
+    </div>
+    <div id="no-storage" hidden z-index="-10">
+        <p>If you're seeing this, you don't <br>have enough local memory to <br>run this plugin!</p>
+    </div>
 
     <script src="popup.js"></script>
 </body>
