refactor: removed old code and renamed global plugin name
Got rid of deprecated code for `storageAvailable.js` and changed the use for global variables.

--- a/popup/popup.html
+++ b/popup/popup.html
@@ -36,7 +36,7 @@
         <input type="number" id="max-volume" name="max-volume" min="0" max="100" value="100" step="5">
     </div>
 
-    <script src="../storageAvailable.js"></script>
+    <script src="../globals.js"></script>
     <script src="popup.js"></script>
 </body>
 
